# test_franka_gmp

./: README.md
env-hooks/: 99.test_franka_common_functions.bash
test_franka_gmp_common_bringup/: CMakeLists.txt  package.xml
test_franka_gmp_common_bringup/parameters/tools/rviz/: moveit.rviz
test_franka_gmp_common_bringup/src/: franka_grasping.py  franka_move.cpp  franka_pick.cpp  grasp_obj.py  grasp_objects.cpp  grasping_points.csv  run_project.sh  vision.py  vrep_demo.py
test_franka_gmp_desktop_bringup/: CMakeLists.txt  package.xml
test_franka_gmp_desktop_bringup/env-hooks/: 99.test_franka_desktop_functions.bash
test_franka_gmp_desktop_bringup/launch/: rviz.launch
test_franka_gmp_simulation_bringup/: CMakeLists.txt  package.xml
test_franka_gmp_simulation_bringup/config/: gazebo_panda.urdf  joint_limits.yaml  panda.srdf  ros_controllers.yaml
test_franka_gmp_simulation_bringup/dev/AdaptiveGoalRegion/experiment/: real_capture_and_save.py  robot_controller_real.py
test_franka_gmp_simulation_bringup/dev/AdaptiveGoalRegion/experiment/server/: directory_script.sh  img_filter.py  run_tools.sh  server.py  server_test.py
test_franka_gmp_simulation_bringup/dev/AdaptiveGoalRegion/src/: capture.py  transform_and_cluster.py  view_results.py
test_franka_gmp_simulation_bringup/dev/AdaptiveGoalRegion/src/adaptive_goal_region/: robot_controller.py
test_franka_gmp_simulation_bringup/dev/AdaptiveGoalRegion/src/adaptive_goal_region/src/: agr_clustering.py  agr_main.py
test_franka_gmp_simulation_bringup/dev/AdaptiveGoalRegion/storage/spline_finals/: agr_output_region.txt  agr_output_single.txt  poses.npz
test_franka_gmp_simulation_bringup/env-hooks/: 99.test_franka_simulation_functions.bash
test_franka_gmp_simulation_bringup/launch/: full.launch
test_franka_gmp_simulation_bringup/src/: attempt_poses.sh  capture_scene.py  generate_poses.sh  move_to_capture.py  move_to_poses.py  pickled_plan.yaml
test_franka_gmp_simulation_bringup/src/grasp_poses/: agr_output_single.txt  agr_output_single_works.txt
test_franka_gmp_simulation_bringup/src/model/: run_model.py  train_model.py
test_franka_gmp_simulation_bringup/urdf/: _d435i.gazebo.xacro  _d435i.urdf.xacro  panda.urdf.xacro
test_franka_gmp_simulation_bringup/worlds/: objects_on_shelf.world
