<?xml version="1.0"?>
<package format="2">
  <name>test_franka_gmp_common_bringup</name>
  <version>0.0.0</version>
  <description>The test_franka_gmp_common_bringup package</description>

  <maintainer email="sangheradavina@gmail.com">davina18</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <!-- Franka_common_dependencies -->
  <depend>libfranka</depend>
  <depend>franka_control</depend>
  <depend>franka_description</depend>
  <depend>franka_example_controllers</depend>
  <depend>franka_gripper</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_ros</depend>
  <depend>franka_visualization</depend>


  <!-- Gazebo_dependencies -->
  <depend>gazebo_msgs</depend>

  <!-- Moveit  -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>ompl</depend>

  <!-- Franka_moveit_dependencies -->
  <depend>panda_moveit_config</depend>

  <!-- others -->
  <depend>gazebo_ros_link_attacher</depend>
  <depend>cv_bridge</depend>
  <depend>depth_image_proc</depend>
  

</package>
