<?xml version="1.0"?>
<package format="2">
  <name>test_franka_gmp_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_franka_gmp_desktop_bringup package</description>

  <maintainer email="sangheradavina@gmail.com">davina18</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Test Franka -->
  <depend>test_franka_gmp_common_bringup</depend>

  <depend>rqt_gui</depend>
  <depend>rviz</depend>
</package>
